[package]
name = "sherlockfinal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3" }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
